--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <div class="relative timeline-container py-8">
                 
                 <!-- 1965 -->
-                <div class="timeline-item mb-8">
+                <div class="timeline-item">
                     <div class="timeline-content flex flex-col items-start">
                         <time class="font-bold text-xl text-cyan-300">1965</time>
                         <div class="time-dot status-strengthened"></div>
