--- a/index.html
+++ b/index.html
@@ -143,6 +143,8 @@
             <p class="text-lg md:text-xl max-w-3xl mx-auto text-cyan-200">A detailed legal chronology of key court cases, federal regulations and other events that shaped, eroded, and ultimately overturned one's Constitutional right to abortion care.</p>
         </header>
 
+<div class="ai-style-change-1">©2025 Brigette Supernova</div>
+        
         <section class="mb-16">
             <div class="max-w-4xl mx-auto bg-[#1A202C] rounded-xl shadow-2xl p-6 md:p-8">
                 <h2 class="text-3xl font-bold text-white text-center mb-4">Legal Climate Temperature Map</h2>
