--- a/index.html
+++ b/index.html
@@ -144,14 +144,14 @@
         </header>
 
 <div class="text-right">©2025 Brigette Supernova</div>
- }
+ 
         
         <section class="mb-16">
             <div class="max-w-4xl mx-auto bg-[#1A202C] rounded-xl shadow-2xl p-6 md:p-8">
                 <h2 class="text-3xl font-bold text-white text-center mb-4">Legal Climate Temperature Map</h2>
                 <p class="text-center mb-8 text-lg text-cyan-300">Visualizing the volatility of legal protections, establishment, and current hostility against bodily autonomy after <span class="font-bold">Roe v. Wade</span> was overturned.</p>
                 
-                <div class="w-full flex flex-col items-center justify-center **h-[450px]**">
+                <div class="w-full flex flex-col items-center justify-center py-12">
                     <div class="w-full max-w-4xl h-8 rounded-full overflow-hidden flex shadow-2xl climate-gradient">
                     </div>
                     <!-- Year Markers (Positioned to align with key shifts) -->
