--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
         <header class="text-center mb-16">
             <h1 class="text-4xl md:text-6xl font-black tracking-tight text-white mb-4">From Hope to Hostility: A 60-Year Legal Shift in Abortion Access</h1>
-            <p class="text-lg md:text-xl max-w-3xl mx-auto text-cyan-200">A detailed legal chronology of **37 key court cases, federal regulations, and legislative actions** that shaped, eroded, and ultimately overturned one's Constitutional right to abortion care.</p>
+            <p class="text-lg md:text-xl max-w-3xl mx-auto text-cyan-200">A detailed legal chronology of key court cases, federal regulations, and legislative actions that shaped, eroded, and ultimately overturned one's Constitutional right to abortion care.</p>
         </header>
 
 <div class="text-right">©2025 Brigette Supernova</div>
