--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
                 
                 /* 2022+: Collapse and Post-Roe Defense */
                 #dc3545 91.0%,   /* Total Collapse: Dobbs v. Jackson */
-                #28a745 91.3%,   /* Green Spike: DOJ Comstock Opinion */
-                #ffc107 92.0%,   /* Yellow Spike: Hippocratic Medicine (YELLOW) - Access win/stabilization */
-                #fd7e14 92.5%,   /* Orange Spike: Moyle v. US (EMTALA) (ORANGE) - Structural chip/temporary defense */
-                #dc3545 93.0%,   /* Post-Roe Hostility (RED) */
+                #28a745 92.0%,   /* Yellow Spike: DOJ Comstock Opinion */
+                #ffc107 92.5%,   /* Green Spike: Hippocratic Medicine (YELLOW) - Access win/stabilization */
+                #fd7e14 93.5%,   /* Orange Spike: Moyle v. US (EMTALA) (ORANGE) - Structural chip/temporary defense */
+                #dc3545 94.5%,   /* Post-Roe Hostility (RED) */
                 #dc3545 100%
             );
         }
