--- a/index.html
+++ b/index.html
@@ -302,8 +302,8 @@
                         <time class="font-bold text-xl text-cyan-300">1979</time>
                         <div class="time-dot status-chip"></div>
                         <div class="mt-3 w-full rounded-lg shadow-xl p-4 status-chip box-base-style">
-                            <h3 class="font-bold text-lg text-white">Bellotti v. Baird (II)</h3>
-                            <p class="text-sm mt-1 text-white">The Court struck down a parental consent requirement, but established that states could require parental consent or notification **if** a judicial bypass procedure was available.</p>
+                            <h3 class="font-bold text-lg text-white">Bellotti v. Baird</h3>
+                            <p class="text-sm mt-1 text-white">The Court struck down a parental consent requirement, but established that states could require parental consent or notification if a judicial bypass procedure was available.</p>
                             <p class="text-sm mt-1 text-cyan-200">This introduced a major hurdle for minors, allowing states to create new procedural barriers to access.</p>
                         </div>
                     </div>
