--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
                         <div class="time-dot status-chip"></div>
                         <div class="mt-3 w-full rounded-lg shadow-xl p-4 status-chip box-base-style">
                             <h3 class="font-bold text-lg text-white">Moyle v. United States (EMTALA)</h3>
-                            <p class="text-sm mt-1 text-white">The Supreme Court ruled on the conflict between state abortion bans and the Emergency Medical Treatment and Active Labor Act (EMTALA), temporarily protecting emergency abortion care under federal law.</p>
+                            <p class="text-sm mt-1 text-white">The Supreme Court ruled on the conflict between state abortion bans and the Emergency Medical Treatment and Active Labor Act, temporarily protecting emergency abortion care under federal law.</p>
                             <p class="text-sm mt-1 text-cyan-200">This provided a temporary federal shield for providers offering life-saving or stabilizing abortion care in states with strict bans.</p>
                         </div>
                     </div>
